# Ai-assistant2

./: .env  .env.example  AI-Productivity-Assistant  AI-Productivity-Assistant.desktop  LAUNCHER_README.md  PROJECT_STATUS.md  README.md  index.html  package.json  setup-desktop-launcher.sh  start-ai-assistant  start_dev.py  tailwind.config.js  vite.config.ts
assets/: create-icon.py
backend/: main.py  requirements.txt  seed_data.py
backend/app/core/: database.py
backend/app/models/: __init__.py  calendar_event.py  chat_message.py  email_message.py  push_subscription.py  suggestion.py  task.py  user.py
backend/database/: database.py
backend/models/: google_token.py  message.py  notification.py  task.py  user.py
backend/routers/: auth.py  calendar.py  chat.py  email.py  search.py  suggestions.py  tasks.py  voice.py
backend/services/: ai_service.py  calendar_service.py  email_service.py  search_service.py  task_service.py
frontend/: package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
launchers/: AI-Productivity-Assistant.bat  AI-Productivity-Assistant.desktop  create-macos-app.sh  launch.sh
scripts/: setup.sh  start.sh  stop.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Header.tsx  Sidebar.tsx  ThemeToggle.tsx
src/contexts/: NotificationContext.tsx  ThemeContext.tsx
src/hooks/: useApi.ts  useVoice.ts
src/pages/: CalendarPage.tsx  ChatPage.tsx  EmailPage.tsx  GoogleCallbackPage.tsx  SettingsPage.tsx  TasksPage.tsx
src/utils/: api.ts
(+12 files in other folders)
